--- a/Contact.html
+++ b/Contact.html
@@ -15,8 +15,11 @@
     <label>Password</label>
     <input type="Password" name="" value="">
     <input type="checkbox" name="" value="">
-    <input type="submit" name="">
-    
+    <input type="submit" name=""><br>
+    <label>your Message</label><br>
+    <textarea name="name" rows="8" cols="80"></textarea>
+
+
   </form>
 
 </body>
